PROJECT( helloworld_proj )
SET(libCURL_DIR "-lcurldll")
SET(OpenCV_DIR "C:\\Documents and Settings\\Lane Kolbly\\My Documents\\Downloads\\opencv\\install")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
FIND_PACKAGE( Threads REQUIRED )
SET(Threads_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
FIND_PACKAGE( OpenCV REQUIRED )
message(STATUS ${Threads_FOUND})
message(STATUS ${Threads_LIBS})
#SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lpthread")
ADD_EXECUTABLE( main networking.cxx processing.cxx main.cxx )
TARGET_LINK_LIBRARIES( main ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} ${libCURL_DIR} )
